--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <title>Achivements</title>
 </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+<body> 
+    <div class="container text-center">
+        <div class="row row-cols-5">
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="row"></div>
-                <div class="row"></div>
+    <div class="container text-center">
+        <div class="row row-cols-3">
+            <div class="col row-row-2">
+                <div class="row my-2">a</div>
+                <div class="row my-2">a</div>
             </div>
-            <div class="col"></div>
-            <div class="col">
-                <div class="row"></div>
-                <div class="row"></div>
+            <div class="col my-4">a</div>
+            <div class="col row-row-2">
+                <div class="row my-2">a</div>
+                <div class="row my-2">a</div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+    <div class="container text-center">
+        <div class="row row-cols-5">
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
+            <div class="col">a</div>
         </div>
     </div>
 </body>
